fix horizontal menu bug (z-index issue

--- a/_html_mobile/css-concat/faq.css
+++ b/_html_mobile/css-concat/faq.css
@@ -2976,6 +2976,7 @@ font-weight: 700;
 #horizontal-menu{
   height: 110px;
   background-color: #202020;
+  z-index: 50;
 }
 
 #horizontal-menu .vid {
