--- a/_html_mobile/css-concat/webtvTrailer.css
+++ b/_html_mobile/css-concat/webtvTrailer.css
@@ -3111,6 +3111,7 @@ font-weight: 700;
 #horizontal-menu{
   height: 110px;
   background-color: #202020;
+  z-index: 50;
 }
 
 #horizontal-menu .vid {
